added ui for user authentication

--- a/ProteoSeq/home/static/home/css/style.css
+++ b/ProteoSeq/home/static/home/css/style.css
@@ -12,6 +12,9 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
+	.form-control{
+		background:#ffffcc;
+	}
 
 	#navbar_main_link{
 		color: #ffffff;
