--- a/ProteoSeq/home/templates/home/base.html
+++ b/ProteoSeq/home/templates/home/base.html
@@ -59,19 +59,38 @@
                 <li><a href="analysis.html" style="color:#ffffff">Analysis</a></li>
                 <li><a href="{% url 'home:documentation' %}" style="color:#ffffff">Documentation</a></li>
                 <li><a href="{% url 'home:contact-us' %}" style="color:#ffffff">Contact Us</a></li>
-                <li><a href="{% url 'usersManager:login_home'%}" style="color:#ffffff">Login</a></li>
+                <!-- <li><a href="{% url 'usersManager:register_user'%}" style="color:#ffffff">Register</a></li> -->
             </ul>
-            {% if not in_login_page %}
-              <div id="navbar" class="navbar-collapse collapse">
-                  <form class="navbar-form navbar-right" action="{% url 'usersManager:login_home'%}?next={{request.path}}" method="post">
-                      {% csrf_token %}
-                      {% for field in login_form %}
-                          {{ field }}
-                      {% endfor %}
-                  <button type="submit" class="btn btn-primary">Sign in</button>
-                  </form>
-              </div>
-              {% else %}
+            {% if not user.is_authenticated %}
+                {% if not in_users_management %}
+                  <div class="navbar-collapse collapse">
+                      <form class="navbar-form navbar-right" action="{% url 'usersManager:login_home'%}?next={{request.path}}" method="post">
+                          {% csrf_token %}
+                          {% for field in login_form %}
+                              {{ field }}
+                          {% endfor %}
+                      <button type="submit" class="btn btn-primary">Sign in</button>
+                      <a id="register_link" name="{% url 'usersManager:register_user'%}?next={{request.path}}" href="javascript:void(0)" style="color:#ffffff;padding-left:10px">Register Here!</a>
+                      <!--see base_settings.js for behaviors of this link -->
+                      </form>
+                  </div>
+                  <!-- <div class="navbar-right">
+                      <li><a href="{% url 'usersManager:register_user'%}" style="color:#ffffff">or register here!</a></li>
+                  </div> -->
+                {% else %}
+                {% endif %}
+            {% else %}
+
+
+                <div class="navbar-collapse collapse">
+                    <form class="navbar-form navbar-right" action="{% url 'usersManager:logout_user'%}?next={{request.path}}" method="post">
+                        {% csrf_token %}
+                        <label id="nav_bar_logged_in"> Welcome, {{ user.get_full_name }}&nbsp&nbsp</label>
+
+                        <button type="submit" class="btn btn-primary">Logout</button>
+                    </form>
+                </div>
+
             {% endif %}
             <!--/.navbar-collapse -->
         </div>
@@ -79,6 +98,8 @@
 
 
     {% block content %} {% endblock %}
+
+<script type="text/javascript" src="{% static 'home/js/base_settings.js' %}"></script>
 
 </body>
 
