--- a/ProteoSeq/usersManager/templates/usersManager/login.html
+++ b/ProteoSeq/usersManager/templates/usersManager/login.html
@@ -2,37 +2,45 @@
 {% block content %}
 {% load staticfiles %}
 
-<link rel="stylesheet" href="{% static 'usersManager/css/login_style.css' %}" />
+<link rel="stylesheet" href="{% static 'usersManager/css/login_register_style.css' %}" />
 
-<div id="login_container" class="container">
+<div id="login_register_container" class="container">
 
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel panel-info">
             <div class="panel-heading">
                 <div class="panel-title">Sign In</div>
             </div>
-            {% if signin_form.errors %}
+            <!-- {% if signin_form.errors %}
               <div style="text-align: center;">
                 <span class="label label-warning" >Invalid username or password. Please try again.</span>
               </div>
+            {% endif %} -->
+            {% if signin_form.errors %}
+                {% for error in signin_form.non_field_errors %}
+                    <div style="text-align: center;padding-top:15px">
+                        <span class="label label-warning" >{{ error|escape }}</span>
+                    </div>
+                {% endfor %}
             {% endif %}
-            <div style="padding-top:30px" class="panel-body">
+            <div style="padding-top:15px" class="panel-body">
 
                 <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
 
                 <form id="loginform" class="form-horizontal" role="form" action="{% url 'usersManager:login_home'%}{% if redirect_url %}?next={{redirect_url}}{% endif %}" method="post">
 
                     {% csrf_token %}
-                    <div style="margin-bottom: 25px" class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input id="login-username" type="text" class="form-control" name="username" placeholder="username or email">
-                    </div>
+                    {% for field in signin_form %}
 
-                    <div style="margin-bottom: 25px" class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                        <input id="login-password" type="password" class="form-control" name="password" placeholder="password">
-                    </div>
+                    <!-- <div style="text-align: center;">
+                      <strong class="alert alert-error">{{field.errors}}</strong>
 
+                    </div> -->
+                      <div style="margin-bottom: 25px" class="input-group">
+                          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                          {{field}}
+                      </div>
+                    {% endfor %}
                     <div style="margin-top:10px" class="form-group">
                         <!-- Button -->
                         <div class="col-sm-12 controls">
