user authentication ui complete

--- a/ProteoSeq/home/templates/home/index.html
+++ b/ProteoSeq/home/templates/home/index.html
@@ -77,9 +77,7 @@
 			<section class="4u">
 				<div class="box">
 					<a href="#" class="image left"><img src="{% static 'home/images/pics04.jpg' %}" alt=""></a>
-					<h3>Protein Inference Problem</h3>
-					<p> </p>
-					<p> </p>
+					<p>Protein Inference Problem</p>
 					<a href="#" class="button">More</a>
 				</div>
 			</section>
@@ -87,19 +85,17 @@
 				<div class="box">
 					<a href="#" class="image left"><img src="{% static 'home/images/pics05.jpg' %}" alt=""></a>
 
-					<h3>Shotgun Proteomics</h3>
-					<p> </p>
-					<p> </p>
-					<p> </p>
+					<p>Shotgun<br>Proteomics</p>
+
+          
 					<a href="#" class="button">More</a>
 				</div>
 			</section>
 			<section class="4u">
 				<div class="box">
 					<a href="#" class="image left"><img src="{% static 'home/images/pics06.jpg' %}" alt=""></a>
-					<h3>3rd generation RNA-sequencing</h3>
-					<p> </p>
-					<p> </p>
+					<p>3rd generation RNA-sequencing</p>
+
 					<a href="#" class="button">More</a>
 				</div>
 			</section>
