--- a/ProteoSeq/home/templates/home/base.html
+++ b/ProteoSeq/home/templates/home/base.html
@@ -18,6 +18,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 
+
 {% load staticfiles %}
 
 <link rel="stylesheet" href="{% static 'home/css/style.css' %}" />
@@ -26,6 +27,7 @@
 <link rel="stylesheet" href="{% static 'home/css/skel-noscript.css' %}" />
 <link rel="stylesheet" href="{% static 'home/css/style.css' %}" />
 <link rel="stylesheet" href="{% static 'home/css/style-desktop.css' %}" />
+
 
 <html lang="en">
 
@@ -99,7 +101,8 @@
 
     {% block content %} {% endblock %}
 
-<script type="text/javascript" src="{% static 'home/js/base_settings.js' %}"></script>
+    <script type="text/javascript" src="{% static 'usersManager/js/userManager_settings.js' %}"></script>
+
 
 </body>
 
