--- a/ProteoSeq/usersManager/templates/usersManager/login.html
+++ b/ProteoSeq/usersManager/templates/usersManager/login.html
@@ -31,11 +31,6 @@
 
                     {% csrf_token %}
                     {% for field in signin_form %}
-
-                    <!-- <div style="text-align: center;">
-                      <strong class="alert alert-error">{{field.errors}}</strong>
-
-                    </div> -->
                       <div style="margin-bottom: 25px" class="input-group">
                           <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                           {{field}}
@@ -43,9 +38,18 @@
                     {% endfor %}
                     <div style="margin-top:10px" class="form-group">
                         <!-- Button -->
-                        <div class="col-sm-12 controls">
-                            <button id="btn-login" type="submit" class="btn btn-primary">Log in</a>
-                        </div>
+                        <!-- <div class="col-sm-12 controls"> -->
+                            <div style="padding-left:15px;padding-right:20px;float:left;">
+                              <button id="btn-login" type="submit" class="btn btn-primary" style="padding-left:15px">Log in</a>
+
+                            </div>
+                            <div style="padding-left:25px;margin-top:5px">
+                              <a id="register_link" name="{% url 'usersManager:register_user'%}{% if redirect_url %}?next={{redirect_url}}{% endif %}" href="javascript:void(0)" style="color:#0066cc;">Don't have an account? Sign up here!</a>
+                            </div>
+
+
+                        <!-- </div> -->
+
                     </div>
                 </form>
             </div>
@@ -53,5 +57,6 @@
     </div>
 
 </div>
+<script type="text/javascript" src="{% static 'usersManager/js/userManager_settings.js' %}"></script>
 
 {% endblock %}
