--- a/ProteoSeq/usersManager/templates/usersManager/register.html
+++ b/ProteoSeq/usersManager/templates/usersManager/register.html
@@ -14,17 +14,17 @@
             {% if register_form.errors %}
                 {% if register_form.non_field_errors %}
                   {% for error in register_form.non_field_errors %}
-                      <div style="text-align: center;">
+                      <div style="text-align: center;padding-top:15px">
                           <span class="label label-warning" >{{ error|escape }}</span>
                       </div>
                   {% endfor %}
                 {% else %}
-                      <div style="text-align: center;">
+                      <div style="text-align: center;padding-top:15px">
                           <span class="label label-warning">Illegal email address,names or password</span>
                       </div>
                 {% endif %}
             {% endif %}
-            <div style="padding-top:30px" class="panel-body">
+            <div style="padding-top:10px" class="panel-body">
 
                 <div style="display:none" id="register-alert" class="alert alert-danger col-sm-12"></div>
 
@@ -35,14 +35,19 @@
                       <div style="margin-bottom: 25px" class="input-group">
                           <span class="input-group-addon"><i ></i></span>
                           {{field}}
-                      </div> 
+                      </div>
                     {% endfor %}
 
                     <div style="margin-top:10px" class="form-group">
                         <!-- Button -->
-                        <div class="col-sm-12 controls">
+                        <div style="padding-left:15px;padding-right:20px;float:left;">
                             <button id="btn-register" type="submit" class="btn btn-primary">Sign Up!</a>
                         </div>
+
+                        <div style="padding-left:25px;margin-top:5px">
+                          <a id="login_link" name="{% url 'usersManager:login_home'%}{% if redirect_url %}?next={{redirect_url}}{% endif %}" href="javascript:void(0)" style="color:#0066cc;">Already have an account? Sign in here!</a>
+                        </div>
+
                     </div>
                 </form>
             </div>
@@ -50,5 +55,6 @@
     </div>
 
 </div>
+<script type="text/javascript" src="{% static 'usersManager/js/userManager_settings.js' %}"></script>
 
 {% endblock %}
