--- a/ProteoSeq/home/templates/home/base.html
+++ b/ProteoSeq/home/templates/home/base.html
@@ -22,8 +22,9 @@
 {% load staticfiles %}
 
 <link rel="stylesheet" href="{% static 'home/css/style.css' %}" />
-<link rel="stylesheet" href="{% static 'home/css/font-awesome.min.css' %}" />
-<link rel="stylesheet" href="{% static 'home/css/font-awesome.css' %}" />
+<!-- <link rel="stylesheet" href="{% static 'home/css/font-awesome.min.css' %}" />
+<link rel="stylesheet" href="{% static 'home/css/font-awesome.css' %}" /> -->
+<script src="https://use.fontawesome.com/5544ee352a.js"></script>
 <link rel="stylesheet" href="{% static 'home/css/skel-noscript.css' %}" />
 <link rel="stylesheet" href="{% static 'home/css/style.css' %}" />
 <link rel="stylesheet" href="{% static 'home/css/style-desktop.css' %}" />
